--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <br>
     <img src="" alt="" width="100px" height="100px">
     <br>
-    <label for="">Busca tu pokemon favorito</label>
-    <input id="buscador" type="text" class="form-control" placeholder="Ingresa nombre o id "> <input class="btn btn-primary" type="button" id="btn" value="Buscar">
+    <label for="">Busca tu pokemon favorito 1-898</label>
+    <input id="buscador" type="text" class="form-control" placeholder="Nombre o id "> <input class="btn btn-primary" type="button" id="btn" value="Buscar">
     <br>
     
     <div id="tabla"> <input class="btn btn-primary" type="button" id="btnr" value="Reiniciar"> <h3 id="puntos">Intentos: 0</h3></div>
